kubernetes/infra/umami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    app.kubernetes.io/name: umami
    app.kubernetes.io/part-of: analytics
