kubernetes/infra/umami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami
  namespace: analytics
  annotations:
    tailscale.com/tags: tag:argocd
    tailscale.com/proxy-class: restricted-userspace
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: umami
      port:
        name: http
  tls:
    - hosts:
        - umami
